[gd_scene load_steps=10 format=3 uid="uid://dise1cf72re8"]

[ext_resource type="Script" uid="uid://clqqfxqvbj1h6" path="res://Scripts/Objects/Pressure_Plate.gd" id="1_5th25"]
[ext_resource type="Shader" uid="uid://f5thhf6sh4p1" path="res://Shaders/ColorRectRoundedCorner.gdshader" id="1_634lu"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_5th25"]
shader = ExtResource("1_634lu")
shader_parameter/rect_size = Vector2(200, 200)
shader_parameter/radius = 0.1

[sub_resource type="RectangleShape2D" id="RectangleShape2D_2ruc0"]
size = Vector2(52.9782, 9.04805)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_f3cfi"]
size = Vector2(47.0539, 4.96656)

[sub_resource type="Animation" id="Animation_d1dk7"]
resource_name = "ButtonDown"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Button:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0666667),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(3, 0.690206), Vector2(3, 6.92923)]
}

[sub_resource type="Animation" id="Animation_f15vc"]
resource_name = "ButtonUp"
length = 0.37
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Button:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.0333333, 0.366667),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(3, 6.92923), Vector2(3, 0.690206)]
}

[sub_resource type="Animation" id="Animation_msdqy"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Button:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(3, 0.690206)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_f15vc"]
_data = {
&"ButtonDown": SubResource("Animation_d1dk7"),
&"ButtonUp": SubResource("Animation_f15vc"),
&"RESET": SubResource("Animation_msdqy")
}

[node name="PressurePlate" type="Node2D"]
scale = Vector2(1.5, 1.5)
script = ExtResource("1_5th25")

[node name="Button" type="ColorRect" parent="."]
material = SubResource("ShaderMaterial_5th25")
offset_left = 3.0
offset_top = 0.690206
offset_right = 50.0
offset_bottom = 13.6902

[node name="Base" type="ColorRect" parent="."]
offset_top = 8.0
offset_right = 53.0
offset_bottom = 16.0
color = Color(0.122252, 0.122252, 0.122252, 1)

[node name="StaticBody2D" type="StaticBody2D" parent="."]
position = Vector2(10.3435, 10.3435)

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(16.1556, 1.13247)
shape = SubResource("RectangleShape2D_2ruc0")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(26.5389, 2.51672)
shape = SubResource("RectangleShape2D_f3cfi")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_f15vc")
}

[node name="Timeout" type="Timer" parent="."]
one_shot = true

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
[connection signal="timeout" from="Timeout" to="." method="_on_timeout_timeout"]
